fixed text alignment and changed button colour

--- a/Contents/app.css
+++ b/Contents/app.css
@@ -18,19 +18,6 @@ main {
     font-family: "Garamond", sans-serif; 
     color: black;
 }
-/* centered and alligned the labels */
-label {
-    display: inline-block;
-    width: 250px;
-    text-align: right;
-}
-/* centered the "Submit" button */
-#submitButton {
-    height: 34px;
-    margin: 0;
-    margin-right: 190px;
-    float: right;
-}
 /* changed footer colour to grey */
 footer {
     background-color: grey;
